2009-02-05  Vlad Seryakov <seryakov@users.sf.net>

        * nsd/range.c: Be more RFC compliant regarding HTTP date in If-Range header

2009-02-05  Vlad Seryakov <seryakov@users.sf.net>

	* nsd/range.c: Check If-Range: header first and return the whole content if
	it was changed before checking ranges

2009-02-04  Vlad Seryakov <seryakov@users.sf.net>

	* nsd/nsd.h:
	* nsd/fastpath.c: Added struct stat in the Conn struct to be reused by
	everyone. This will save extra stat call and i used in range.c to check
	last modified time

	* nsd/range.c: Check for If-Range: header and return the whole
	file if it was changed

2008-12-21  Vlad Seryakov <seryakov@users.sf.net>

	* nsd/mime.c: Added .flv extension into default MIME types

2008-11-18  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* nsproxy/nsproylib.c: Fixed race-condition that could lead to
	starting more than one reaper thread.

2008-11-08  Vlad Seryakov <seryakov@users.sf.net>

	* nsd/connio.c: Mark connection flags with NS_CONN_SENT_LAST_CHUNK
	when last chunk is actuall sent.

2008-11-07  Stephen Deasey <sdeasey@users.sf.net>

	* include/ns.:
	* nsd/driver.c:
	* nsd/sockfile.c:
	* nssock/nssock.c: Drivers can now leave Ns_Driver.sendFileProc
	unimplemented - it is an optimisation only. The sendProc will be
	called as necessary to send files.

	Ns_SockSendFileBufsIndirect not exported.

	Ns_SockSendFile etc. now take an Ns_Sock rather than a plain
	file descriptor. This is kind of dissapointing because it breaks
	the symetry with Ns_SockSendBufs etc., so this call can only be
	used with connection sockets, not sockets in general. However, the
	Ns_Sock context is needed in the fallback case to pass on to the
	drivers Ns_DriverSend proc, and there looks like no otrher option.

2008-11-07  Vlad Seryakov <seryakov@users.sf.net>

	tcl/fastpath.tcl: Revert back because it is bad and a security hole

2008-11-06  Vlad Seryakov <seryakov@users.sf.net>

	tcl/fastpath.tcl: Check for 0.0.0.0 address in nssock and